<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvOptionsWaves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvOptionsWaves" />

    <SeekBar
        android:id="@+id/sbOptionsWaves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvOptionsWavesSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvOptionsWavesSet" />

    <CheckBox
        android:id="@+id/cbOptionsDisplayFPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbOptionsDisplayFPS" />

</LinearLayout>