<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:gravity="bottom|center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ivMainLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvMainTitle"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnMainStart"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnMainStart" />

        <Button
            android:id="@+id/btnMainOptions"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnMainOptions" />

        <Button
            android:id="@+id/btnMainExit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnMainExit" />
    </LinearLayout>

</LinearLayout>